--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     if (typeof web3 !== 'undefined') {
         web3 = new Web3(web3.currentProvider);
     } else {
-        web3 = new Web3(new Web3.providers.HttpProvider("http://127.0.0.1:8545"));
+        web3 = new Web3(new Web3.providers.HttpProvider("http://127.0.0.1:8545")); // please change to your own Web3 Endpoint
     }
     web3.eth.defaultAccount = web3.eth.accounts[0];
     console.log(web3.eth.defaultAccount);
