--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     if (typeof web3 !== 'undefined') {
         web3 = new Web3(web3.currentProvider);
     } else {
-        web3 = new Web3(new Web3.providers.HttpProvider("http://127.0.0.1:8545")); // please change to your own Web3 Provider Endpoint.
+        web3 = new Web3(new Web3.providers.HttpProvider("http://127.0.0.1:8545")); // please change to your own Web3_Provider_Endpoint.
     }
     web3.eth.defaultAccount = web3.eth.accounts[0];
     console.log(web3.eth.defaultAccount);
@@ -89,7 +89,7 @@
         }
     ];
     var myContract = web3.eth.contract(ABI);
-    var myFirst = myContract.at('0x17320ba8abab4bca3cfac50014c651bda6bf8443'); // Please change to your own Contract Account.
+    var myFirst = myContract.at('0x17320ba8abab4bca3cfac50014c651bda6bf8443'); // Please change to your own Contract_Account.
     console.log(myFirst);
 
     //-----------------------
